COMMERCE-8196 build lang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -3499,6 +3499,7 @@ configure-x=Configura {0}
 configured-database=Base de dades configurada
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Configura si un convidat pot finalitzar la compra proporcionant una adreça electrònica o si ha d'iniciar la sessió.
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configura si la data d'entrega sol·licitada d'una comanda es pot establir durant el pagament.
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configura si es mostra el pas de la comprovació dels termes de pagament durant la finalització de la compra.
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configura si el número de comanda de compra es mostra o s'oculta en els detalls de les comandes realitzades i pendents.
 confirm=Confirmeu
@@ -15386,6 +15387,7 @@ there-are-no-assigned-items-overdue-at-the-moment=No hi ha cap element assignat 
 there-are-no-attachments=No hi ha elements adjunts.
 there-are-no-availability-estimates=No hi ha estimacions de disponibilitat.
 there-are-no-available-advanced-settings-for-these-pages=No hi ha cap configuració avançada disponible per a aquests pàgines.
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=No hi ha articles disponibles per enviar a la comanda seleccionada.
 there-are-no-available-nodes-for-selection=No hi ha cap node disponible per seleccionar.
 there-are-no-available-payment-methods=No hi ha mètodes de pagament disponibles.
@@ -16893,6 +16895,8 @@ view-current-fields-warning-message=S'estan mostrant els camps que hi ha actualm
 view-customizable-zones=Mostra zones personalitzables
 view-data=Mostra les dades
 view-data-in-analytics-cloud=Mostra les dades d'Analytics Cloud
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Visualitza els detalls
 view-diff=Mostra la diferència
 view-display-page=Mostra una pàgina de visualització
