--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -3499,6 +3499,7 @@ configure-x=Configure {0} (Automatic Copy)
 configured-database=Nastavená databáze
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Nakonfiguruje, zda se host může odbavovat poskytnutím e-mailové adresy nebo zda se musí přihlásit. (Automatic Translation)
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details. (Automatic Copy)
 confirm=Potvrdit
@@ -15384,6 +15385,7 @@ there-are-no-assigned-items-overdue-at-the-moment=V současné době nejsou při
 there-are-no-attachments=Nebyly nalezeny žádné přílohy.
 there-are-no-availability-estimates=Nejsou k dispozici žádné odhady dostupnosti. (Automatic Translation)
 there-are-no-available-advanced-settings-for-these-pages=Pro tyto stránky není k dispozici žádné pokročilé nastavení.
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=Ve vybrané objednávce nejsou k dispozici žádné položky k odeslání. (Automatic Translation)
 there-are-no-available-nodes-for-selection=Nebyly nalezeny žádné pro výběr dostupné uzly.
 there-are-no-available-payment-methods=Nejsou k dispozici žádné platební metody. (Automatic Translation)
@@ -16891,6 +16893,8 @@ view-current-fields-warning-message=Toto zobrazení vždy odráží aktuální p
 view-customizable-zones=Zobrazit přizpůsobitelné zóny (Automatic Translation)
 view-data=Zobrazit data
 view-data-in-analytics-cloud=Zobrazení dat v cloudu Analytics (Automatic Translation)
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Zobrazit detaily
 view-diff=Zobrazit rozdíl (Automatic Translation)
 view-display-page=Zobrazit stránku zobrazení (Automatic Translation)
