--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -3499,6 +3499,7 @@ configure-x={0} konfigurieren
 configured-database=Konfigurierte Datenbank
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Konfiguriert, ob ein Gast durch Angabe einer E-Mail-Adresse auschecken darf oder ob er sich anmelden muss.
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Legt fest, ob während dem Auschecken ein angefragtes Lieferdatum festgelegt werden kann.
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Legt fest, ob der Schritt Zahlungsbedingungen während dem Auschecken angezeigt werden soll.
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Legt fest, ob die Bestellnummer in den erteilten und ausstehenden Bestelldetails angezeigt oder ausgeblendet wird.
 confirm=Bestätigen
@@ -15386,6 +15387,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Zur Zeit sind keine zugewiesen
 there-are-no-attachments=Keine Anhänge verfügbar.
 there-are-no-availability-estimates=Es gibt keine Schätzungen für Verfügbarkeit.
 there-are-no-available-advanced-settings-for-these-pages=Es sind keine erweiterten Einstellungen für diese Seiten verfügbar.
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=In der ausgewählten Bestellung sind keine Artikel für den Versand verfügbar.
 there-are-no-available-nodes-for-selection=Für diese Auswahl sind keine Knoten verfügbar.
 there-are-no-available-payment-methods=Es gibt keine verfügbaren Zahlungsmethoden.
@@ -16893,6 +16895,8 @@ view-current-fields-warning-message=Anzeigen von Feldern, die derzeit im Formula
 view-customizable-zones=Anpassbare Bereiche anzeigen
 view-data=Daten anzeigen
 view-data-in-analytics-cloud=Daten in der Analytics-Cloud anzeigen
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Details anzeigen
 view-diff=Differenz anzeigen
 view-display-page=Anzeigeseite anzeigen
