--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_GB.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_GB.properties
@@ -3499,6 +3499,7 @@ configure-x=Configure {0} (Automatic Copy)
 configured-database=Configured Database (Automatic Copy)
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Configures whether a guest may checkout by providing an email address or if they must sign in. (Automatic Copy)
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details. (Automatic Copy)
 confirm=Confirm (Automatic Copy)
@@ -15384,6 +15385,7 @@ there-are-no-assigned-items-overdue-at-the-moment=There are no assigned items ov
 there-are-no-attachments=There are no attachments. (Automatic Copy)
 there-are-no-availability-estimates=There are no availability estimates. (Automatic Copy)
 there-are-no-available-advanced-settings-for-these-pages=There are no available advanced settings for these pages. (Automatic Copy)
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=There are no available items to ship in the selected order. (Automatic Copy)
 there-are-no-available-nodes-for-selection=There are no available nodes for selection. (Automatic Copy)
 there-are-no-available-payment-methods=There are no available payment methods. (Automatic Copy)
@@ -16891,6 +16893,8 @@ view-current-fields-warning-message=This display always reflects the form's curr
 view-customizable-zones=View Customisable Zones
 view-data=View data (Automatic Copy)
 view-data-in-analytics-cloud=View Data in Analytics Cloud (Automatic Copy)
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=View Details (Automatic Copy)
 view-diff=View Diff (Automatic Copy)
 view-display-page=View Display Page (Automatic Copy)
