--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -3499,6 +3499,7 @@ configure-x=Configurar {0}
 configured-database=Base de datos configurada
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Configura si se permite a un invitado finalizar la compra proporcionando una dirección de correo electrónico o si debe iniciar sesión.
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Esta opción permite configurar si se puede establecer una fecha de entrega solicitada al finalizar la compra.
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configure si se muestra el paso de finalización de compra de las condiciones de pago al finalizar la compra.
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Establece si el número del pedido de compra se muestra u oculta en los detalles de pedidos realizados y pendientes.
 confirm=Confirmar
@@ -15386,6 +15387,7 @@ there-are-no-assigned-items-overdue-at-the-moment=No hay artículos asignados ve
 there-are-no-attachments=No hay adjuntos.
 there-are-no-availability-estimates=No hay cálculos de disponibilidad disponibles.
 there-are-no-available-advanced-settings-for-these-pages=No hay configuración avanzada disponible para estas páginas.
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=No hay artículos disponibles para enviar en el pedido seleccionado.
 there-are-no-available-nodes-for-selection=No hay nodos disponibles para su selección.
 there-are-no-available-payment-methods=No hay métodos de pago disponibles.
@@ -16893,6 +16895,8 @@ view-current-fields-warning-message=Se muestran los campos presentes actualmente
 view-customizable-zones=Ver zonas personalizables
 view-data=Ver datos
 view-data-in-analytics-cloud=Ver datos de Analytics Cloud
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Ver detalles
 view-diff=Ver diferencias
 view-display-page=Ver página de visualización
