--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -3499,6 +3499,7 @@ configure-x=Configure {0} (Automatic Copy)
 configured-database=Konfigureeritud andmebaas (Automatic Translation)
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Konfigureerib, kas külaline võib välja möllida, esitades e-posti aadressi või peab sisse logima. (Automatic Translation)
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details. (Automatic Copy)
 confirm=Kinnita
@@ -15384,6 +15385,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Määratud üksusi pole praegu
 there-are-no-attachments=Manuseid pole. (Automatic Translation)
 there-are-no-availability-estimates=Saadavuse hinnanguid pole. (Automatic Translation)
 there-are-no-available-advanced-settings-for-these-pages=Nende lehtede jaoks pole täpsemaid sätteid saadaval. (Automatic Translation)
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=Valitud tellimuses pole lähetatavaid kaupu saadaval. (Automatic Translation)
 there-are-no-available-nodes-for-selection=Valimiseks pole vabu sõlme. (Automatic Translation)
 there-are-no-available-payment-methods=Makseviise pole saadaval. (Automatic Translation)
@@ -16891,6 +16893,8 @@ view-current-fields-warning-message=See kuva kajastab alati vormi praeguseid vä
 view-customizable-zones=Kohandatavate tsoonide kuvamine (Automatic Translation)
 view-data=Vaata andmeid
 view-data-in-analytics-cloud=Andmete kuvamine Analyticsi pilves (Automatic Translation)
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Kuva üksikasjad (Automatic Translation)
 view-diff=Vaade Erinevus (Automatic Translation)
 view-display-page=Kuva kuvaleht (Automatic Translation)
