--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -3499,6 +3499,7 @@ configure-x=Määritä {0}
 configured-database=Määrittele tietokanta
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Määrittää, voiko vieras poistua kassalle antamalla sähköpostiosoitteen, vai onko hänen kirjauduttava.
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Määrittää voiko tilauksen pyydetyn toimituspäivän määrittää maksun aikana.
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Määrittää näytetäänkö maksuehtojen kassavaihe ostoksen viimeistelyn aikana.
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Määrittää näytetäänkö ostotilauksen numero vai piilotetaanko se jätettyjen ja odottavien tilausten tiedoissa.
 confirm=Vahvista
@@ -15382,6 +15383,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Tällä hetkellä ei ole eräp
 there-are-no-attachments=Ei ole liitteitä.
 there-are-no-availability-estimates=Saatavuusarvioita ei ole.
 there-are-no-available-advanced-settings-for-these-pages=Näille sivuille ei ole edistyneitä asetuksia.
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=Ei ole kohteita saatavana toimitettavaksi valittuun tilaukseen.
 there-are-no-available-nodes-for-selection=Ei ole solmuja valittaviksi.
 there-are-no-available-payment-methods=Käytettävissä olevia maksutapoja ei ole.
@@ -16889,6 +16891,8 @@ view-current-fields-warning-message=Näyttää tällä hetkellä lomakkeella ole
 view-customizable-zones=Näytä mukautettavat alueet
 view-data=Näytä tieto
 view-data-in-analytics-cloud=Näytä Data Analytics-pilvessä
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Näytä lisätietoja
 view-diff=Näytä Ero
 view-display-page=Näytä Näyttösivu
