--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -3499,6 +3499,7 @@ configure-x=Configurer {0}
 configured-database=Base de données configurée
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Configure si un invité peut payer juste en fournissant une adresse e-mail ou s'il doit être connecté.
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configure si une demande de date de livraison pour une commande peut être définie lors du paiement.
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configure si l'étape des conditions de paiement est affichée lors du paiement.
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configure si le numéro de bon de commande est affiché ou masqué dans les détails de la commande passée et en attente.
 confirm=Confirmez
@@ -15386,6 +15387,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Aucun élément affecté n'est
 there-are-no-attachments=Pas de pièce-jointe.
 there-are-no-availability-estimates=Il n'y a aucune estimation de disponibilité.
 there-are-no-available-advanced-settings-for-these-pages=Il n'y a aucun paramètre avancé disponible pour ces pages.
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=La commande sélectionnée ne compte aucun article disponible à expédier.
 there-are-no-available-nodes-for-selection=Il n'y a aucun noeud disponible pour le choix.
 there-are-no-available-payment-methods=Il n'y a aucun moyen de paiement disponible.
@@ -16893,6 +16895,8 @@ view-current-fields-warning-message=Affichage des champs actuellement présents 
 view-customizable-zones=Visualiser les zones personnalisables
 view-data=Voir les données
 view-data-in-analytics-cloud=Afficher les données dans le Cloud analytique
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Voir le détail
 view-diff=Afficher la différence
 view-display-page=Afficher une page d'affichage
