--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -3499,6 +3499,7 @@ configure-x=Configure {0} (Automatic Copy)
 configured-database=कॉन्फ़िगर किया गया डाटाबेस (Automatic Translation)
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=कॉन्फ़िगर करता है कि क्या कोई अतिथि ईमेल पता प्रदान करके चेकआउट कर सकता है या यदि उन्हें साइन इन करना चाहिए। (Automatic Translation)
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details. (Automatic Copy)
 confirm=पुष्टि करें
@@ -15384,6 +15385,7 @@ there-are-no-assigned-items-overdue-at-the-moment=इस समय कोई स
 there-are-no-attachments=कोई अटैचमेंट नहीं हैं। (Automatic Translation)
 there-are-no-availability-estimates=कोई उपलब्धता अनुमान नहीं हैं। (Automatic Translation)
 there-are-no-available-advanced-settings-for-these-pages=इन पृष्ठों के लिए कोई उन्नत सेटिंग्स उपलब्ध नहीं हैं। (Automatic Translation)
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=चयनित आदेश में जहाज के लिए कोई उपलब्ध आइटम नहीं हैं। (Automatic Translation)
 there-are-no-available-nodes-for-selection=कोई भी नोड selection के लिए available नही है|
 there-are-no-available-payment-methods=भुगतान के कोई तरीके उपलब्ध नहीं हैं। (Automatic Translation)
@@ -16891,6 +16893,8 @@ view-current-fields-warning-message=यह प्रदर्शन हमेश
 view-customizable-zones=अनुकूलन योग्य ज़ोन देखें (Automatic Translation)
 view-data=डेटा देखें
 view-data-in-analytics-cloud=एनालिटिक्स क्लाउड में डेटा देखें (Automatic Translation)
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=विवरण देखें
 view-diff=डिफ देखें
 view-display-page=प्रदर्शन पृष्ठ देखें
