--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -3499,6 +3499,7 @@ configure-x={0} konfigurálása
 configured-database=Beállított adatbázis
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Konfigurálja, hogy egy vendég vásárolhat-e e-mail cím megadásával, vagy be kell jelentkeznie.
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Konfigurálja, hogy a megrendelés kívánt kiszállítási dátuma beállítható legyen-e a fizetésnél.
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Konfigurálja. hogy a fizetésnél megjelenjen-e a fizetési feltételek lépése.
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Konfigurálja, hogy a megrendelő száma megjelenjen vagy rejtve maradjon az elküldött és a függőben lévő megrendelések adatai közt.
 confirm=Megerősít
@@ -15387,6 +15388,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Jelenleg nincs megkésett hozz
 there-are-no-attachments=Nincs melléklet.
 there-are-no-availability-estimates=Nincsenek elérhetőség-becslések.
 there-are-no-available-advanced-settings-for-these-pages=Nincsenek további beállítási lehetőségek ezekhez az oldalakhoz.
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=A kiváasztott megrendelésben nincsenek szállítható tételek.
 there-are-no-available-nodes-for-selection=A választáshoz tartoznak csomópontok.
 there-are-no-available-payment-methods=Nincsenek elérhető fizetési módok.
@@ -16894,6 +16896,8 @@ view-current-fields-warning-message=Az űrlap által jelenleg tartalmazott mező
 view-customizable-zones=Tesztreszabható zónák megtekintése
 view-data=Adatok megjelenítése
 view-data-in-analytics-cloud=Analytics felhő adatainak megtekintése
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Részletek megtekintése
 view-diff=Különbség megtekintése
 view-display-page=Megjelenítő oldal megtekintése
