--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -3498,6 +3498,7 @@ configure-x=Configura {0}
 configured-database=Configura Database
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Configura se un guest può effettuare il checkout fornendo un indirizzo e-mail o se deve accedere.
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details. (Automatic Copy)
 confirm=Conferma
@@ -15385,6 +15386,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Al momento non sono in ritardo
 there-are-no-attachments=Non ci sono allegati.
 there-are-no-availability-estimates=Non ci sono stime di disponibilità. (Automatic Translation)
 there-are-no-available-advanced-settings-for-these-pages=Non ci sono impostazioni avanzate disponibili per queste pagine.
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=Non ci sono articoli disponibili da spedire nell'ordine selezionato. (Automatic Translation)
 there-are-no-available-nodes-for-selection=Non ci sono nodi disponibili per la selezione.
 there-are-no-available-payment-methods=Non ci sono metodi di pagamento disponibili. (Automatic Translation)
@@ -16892,6 +16894,8 @@ view-current-fields-warning-message=Questa visualizzazione riflette sempre i cam
 view-customizable-zones=Visualizza Zone Personalizzabili
 view-data=Visualizza dati
 view-data-in-analytics-cloud=Visualizzare i dati in Analytics Cloud (Automatic Translation)
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Visualizza Dettagli
 view-diff=Visualizza Diff (Automatic Translation)
 view-display-page=Visualizza pagina di visualizzazione (Automatic Translation)
