--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -3499,6 +3499,7 @@ configure-x=Configure {0} (Automatic Copy)
 configured-database=구성된 데이터베이스 (Automatic Translation)
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=게스트가 이메일 주소를 제공하여 체크아웃할 수 있는지 또는 로그인해야 하는지 여부를 구성합니다. (Automatic Translation)
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details. (Automatic Copy)
 confirm=확인하십시요
@@ -15383,6 +15384,7 @@ there-are-no-assigned-items-overdue-at-the-moment=현재 기한이 초과된 항
 there-are-no-attachments=첨부 파일이 없습니다. (Automatic Translation)
 there-are-no-availability-estimates=가용성 추정치는 없습니다. (Automatic Translation)
 there-are-no-available-advanced-settings-for-these-pages=이러한 페이지에사용할 수 있는 고급 설정은 없습니다. (Automatic Translation)
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=선택한 순서로 배송할 수 있는 품목은 없습니다. (Automatic Translation)
 there-are-no-available-nodes-for-selection=선택할 수 있는 노드가 없습니다. (Automatic Translation)
 there-are-no-available-payment-methods=사용 가능한 결제 방법은 없습니다. (Automatic Translation)
@@ -16890,6 +16892,8 @@ view-current-fields-warning-message=현재 양식에 있는 필드 표시
 view-customizable-zones=사용자 지정 영역 보기 (Automatic Translation)
 view-data=전망 자료
 view-data-in-analytics-cloud=분석 클라우드에서 데이터 보기 (Automatic Translation)
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=세부 정보 보기 (Automatic Translation)
 view-diff=Diff 보기 (Automatic Translation)
 view-display-page=표시 페이지 보기 (Automatic Translation)
