--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -3499,6 +3499,7 @@ configure-x=Configure {0} (Automatic Copy)
 configured-database=Sukonfigūruota duomenų bazė (Automatic Translation)
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Konfigūruoja, ar svečias gali išsiregistruoti pateikdamas el. pašto adresą, ar turi prisijungti. (Automatic Translation)
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details. (Automatic Copy)
 confirm=Patvirtinti (Automatic Translation)
@@ -15384,6 +15385,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Šiuo metu nėra priskirtų pr
 there-are-no-attachments=Priedų nėra. (Automatic Translation)
 there-are-no-availability-estimates=Nėra prieinamumo įvertinimų. (Automatic Translation)
 there-are-no-available-advanced-settings-for-these-pages=Nėra galimų išplėstinių šių puslapių parametrų. (Automatic Translation)
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=Nėra prekių, kurias būtų galima siųsti pasirinktu užsakymu. (Automatic Translation)
 there-are-no-available-nodes-for-selection=Nėra galimų pasirinkimo mazgų. (Automatic Translation)
 there-are-no-available-payment-methods=Nėra galimų mokėjimo būdų. (Automatic Translation)
@@ -16891,6 +16893,8 @@ view-current-fields-warning-message=Šis ekranas visada atspindi dabartinius for
 view-customizable-zones=Peržiūrėti tinkinamas zonas (Automatic Translation)
 view-data=Peržiūrėti duomenis (Automatic Translation)
 view-data-in-analytics-cloud=Duomenų peržiūra "Analytics Cloud" (Automatic Translation)
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Peržiūrėti išsamią informaciją (Automatic Translation)
 view-diff=Peržiūrėti difer difer (Automatic Translation)
 view-display-page=Rodyti rodymo puslapį (Automatic Translation)
