--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -3499,6 +3499,7 @@ configure-x=Configure {0} (Automatic Copy)
 configured-database=Pangkalan Data Yang Dikonfigurasikan (Automatic Translation)
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Mengkonfigurasi sama ada tetamu boleh mendaftar keluar dengan memberikan alamat e-mel atau jika mereka mesti mendaftar masuk. (Automatic Translation)
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details. (Automatic Copy)
 confirm=Mengesahkan (Automatic Translation)
@@ -15384,6 +15385,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Tiada item yang ditugaskan ter
 there-are-no-attachments=Tiada lampiran. (Automatic Translation)
 there-are-no-availability-estimates=Tiada anggaran ketersediaan. (Automatic Translation)
 there-are-no-available-advanced-settings-for-these-pages=Tiada seting lanjutan yang tersedia untuk halaman ini. (Automatic Translation)
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=Tiada item tersedia untuk dihantar dalam susunan yang dipilih. (Automatic Translation)
 there-are-no-available-nodes-for-selection=Tiada nod yang tersedia untuk pemilihan. (Automatic Translation)
 there-are-no-available-payment-methods=Tiada kaedah pembayaran yang tersedia. (Automatic Translation)
@@ -16891,6 +16893,8 @@ view-current-fields-warning-message=Paparan ini sentiasa mencerminkan medan sema
 view-customizable-zones=Lihat Zon Boleh Disesuaikan (Automatic Translation)
 view-data=Lihat data (Automatic Translation)
 view-data-in-analytics-cloud=Lihat Data dalam Awan Analisis (Automatic Translation)
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Lihat Butiran (Automatic Translation)
 view-diff=Lihat Berbeza (Automatic Translation)
 view-display-page=Lihat Halaman Paparan (Automatic Translation)
