--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -3499,6 +3499,7 @@ configure-x=Konfigurer {0}
 configured-database=Konfigurert database
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Konfigurerer om en gjest kan betale ved å oppgi en e-postadresse eller om de må logge på. (Automatic Translation)
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details. (Automatic Copy)
 confirm=Bekreft
@@ -15384,6 +15385,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Ingen tilordnede elementer er 
 there-are-no-attachments=Det finnes ingen vedlegg.
 there-are-no-availability-estimates=Det finnes ingen tilgjengelighetsestimater. (Automatic Translation)
 there-are-no-available-advanced-settings-for-these-pages=Ingen avanserte innstillinger er tilgjengelig for disse sidene.
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=Det finnes ingen tilgjengelige varer å levere i den valgte ordren. (Automatic Translation)
 there-are-no-available-nodes-for-selection=Det er ingen noder tilgjengelig for utvalg.
 there-are-no-available-payment-methods=Det finnes ingen tilgjengelige betalingsmåter. (Automatic Translation)
@@ -16891,6 +16893,8 @@ view-current-fields-warning-message=Viser felt som for øyeblikket er til stede 
 view-customizable-zones=Vis tilpassbare soner
 view-data=Vis data
 view-data-in-analytics-cloud=Vis data i Analytics Cloud (Automatic Translation)
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Vis detaljer
 view-diff=Vis forskjeller
 view-display-page=Vis visningsside (Automatic Translation)
