--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -3499,6 +3499,7 @@ configure-x={0} configureren
 configured-database=Geconfigureerde database
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Configureert of een gast kan afrekenen door een e-mailadres op te geven of zich moet aanmelden.
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configureert of een gevraagde leveringsdatum kan worden ingesteld voor de bestelling tijdens de betaling.
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configureert of de betalingsvoorwaarden voor de afrekenstap getoond wordt tijdens het afrekenen.
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configureert of het koopordernummer wordt weergegeven of verborgen in de details van geplaatste bestellingen en bestellingen in behandeling.
 confirm=Bevestigen
@@ -15387,6 +15388,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Er zijn momenteel geen laattij
 there-are-no-attachments=Er zijn geen bijlagen.
 there-are-no-availability-estimates=Er zijn geen beschikbaarheidsramingen.
 there-are-no-available-advanced-settings-for-these-pages=Er zijn geen geavanceerde instellingen beschikbaar voor deze pagina's.
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=Er zijn geen items beschikbaar voor verzending in de geselecteerde order.
 there-are-no-available-nodes-for-selection=Er zijn geen knooppunten beschikbaar voor selectie.
 there-are-no-available-payment-methods=Er zijn geen beschikbare betaalwijzen.
@@ -16894,6 +16896,8 @@ view-current-fields-warning-message=De velden die nu in het formulier voorkomen,
 view-customizable-zones=Bekijk aanpasbare gebieden
 view-data=Data bekijken
 view-data-in-analytics-cloud=Data weergeven in Analytics Cloud
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Details bekijken
 view-diff=Verschillen bekijken
 view-display-page=Weergavepagina bekijken
