--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -3499,6 +3499,7 @@ configure-x=Configure {0} (Automatic Copy)
 configured-database=Baza danych jest skonfigurowana.
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Skonfiguruje, czy gość może wyewidencjonować, podając adres e-mail lub czy musi się zalogować. (Automatic Translation)
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details. (Automatic Copy)
 confirm=Potwierdź
@@ -15384,6 +15385,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Obecnie nie ma przypisanych el
 there-are-no-attachments=Brak załączników.
 there-are-no-availability-estimates=Nie ma żadnych szacunków dostępności. (Automatic Translation)
 there-are-no-available-advanced-settings-for-these-pages=Brak dostępnych ustawień zaawansowanych dla tych stron.
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=W wybranej kolejności nie ma dostępnych przedmiotów do wysłania. (Automatic Translation)
 there-are-no-available-nodes-for-selection=Brak dostępnych węzłów do wyboru.
 there-are-no-available-payment-methods=Nie ma dostępnych metod płatności. (Automatic Translation)
@@ -16891,6 +16893,8 @@ view-current-fields-warning-message=Ten ekran zawsze odzwierciedla bieżące pol
 view-customizable-zones=Wyświetlanie konfigurowalnych stref (Automatic Translation)
 view-data=Zobacz dane
 view-data-in-analytics-cloud=Wyświetlanie danych w chmurze Analytics (Automatic Translation)
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Pokaż szczegóły
 view-diff=Wyświetl dyferwę (Automatic Translation)
 view-display-page=Wyświetl stronę wyświetlaną (Automatic Translation)
