--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -3499,6 +3499,7 @@ configure-x=Configurar {0}
 configured-database=Base de dados configurada
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Configura se um convidado pode realizar a checagem fornecendo um endereço de e-mail ou se eles precisam acessar.
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configura se uma data de entrega solicitada pelo pedido pode ser definida durante a finalização de compra.
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configura se a etapa de finalização de compra dos termos de pagamento é exibida durante a finalização de compra.
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configura quando o número de pedido da compra é exibido ou ocultado nos detalhes do pedido, realizado e pendente.
 confirm=Confirmar
@@ -15384,6 +15385,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Não há itens atribuídos atr
 there-are-no-attachments=Não há anexos.
 there-are-no-availability-estimates=Não existe estimativas disponíveis.
 there-are-no-available-advanced-settings-for-these-pages=Não há configurações avançadas disponíveis para estas páginas.
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=Não há itens disponíveis para serem enviados no pedido selecionado.
 there-are-no-available-nodes-for-selection=Não há nós disponíveis para a seleção.
 there-are-no-available-payment-methods=Não existem métodos de pagamento disponíveis.
@@ -16891,6 +16893,8 @@ view-current-fields-warning-message=Exibindo os campos atualmente presentes no f
 view-customizable-zones=Ver Zonas Personalizáveis
 view-data=Visualizar dados
 view-data-in-analytics-cloud=Visualizar Dados na Analytics Cloud
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Visualizar detalhes
 view-diff=Visual. Diferenças
 view-display-page=Visualizar página de exibição
