--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -3499,6 +3499,7 @@ configure-x=Configure {0} (Automatic Copy)
 configured-database=Base de Dados Configurada
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Configura se um hóspede pode fazer o check-out fornecendo um endereço de e-mail ou se deve fazer login. (Automatic Translation)
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details. (Automatic Copy)
 confirm=Confirmar
@@ -15386,6 +15387,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Não há itens atribuídos em 
 there-are-no-attachments=Não há anexos.
 there-are-no-availability-estimates=Não há estimativas de disponibilidade. (Automatic Translation)
 there-are-no-available-advanced-settings-for-these-pages=Não há configurações avançadas disponíveis para estas páginas.
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=Não há itens disponíveis para enviar na ordem selecionada. (Automatic Translation)
 there-are-no-available-nodes-for-selection=Não há nós disponíveis para a seleção.
 there-are-no-available-payment-methods=Não há métodos de pagamento disponíveis. (Automatic Translation)
@@ -16893,6 +16895,8 @@ view-current-fields-warning-message=Este display reflete sempre os campos atuais
 view-customizable-zones=Ver Zonas Personalizáveis
 view-data=Visualizar Dados
 view-data-in-analytics-cloud=Exibir dados na nuvem de análise (Automatic Translation)
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Ver Detalhes
 view-diff=Ver Diff (Automatic Translation)
 view-display-page=Exibir página de exibição (Automatic Translation)
