--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -3499,6 +3499,7 @@ configure-x=Configure {0} (Automatic Copy)
 configured-database=Bază de date configurată (Automatic Translation)
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Configurează dacă un oaspete poate face checkout furnizând o adresă de e-mail sau dacă trebuie să se conecteze. (Automatic Translation)
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details. (Automatic Copy)
 confirm=Confirmă
@@ -15384,6 +15385,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Nu există elemente asociate r
 there-are-no-attachments=Nu există atașări. (Automatic Translation)
 there-are-no-availability-estimates=Nu există estimări ale disponibilității. (Automatic Translation)
 there-are-no-available-advanced-settings-for-these-pages=Nu există setări complexe disponibile pentru aceste pagini. (Automatic Translation)
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=Nu există elemente disponibile de livrat în ordinea selectată. (Automatic Translation)
 there-are-no-available-nodes-for-selection=Nu sunt sunt noduri valabile pentru selectie.
 there-are-no-available-payment-methods=Nu există metode de plată disponibile. (Automatic Translation)
@@ -16891,6 +16893,8 @@ view-current-fields-warning-message=Această afișare reflectă întotdeauna câ
 view-customizable-zones=Vizualizare zone particularizabile (Automatic Translation)
 view-data=Vizualizeaza date
 view-data-in-analytics-cloud=Vizualizarea datelor în Analytics Cloud (Automatic Translation)
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Vizualizare detalii (Automatic Translation)
 view-diff=Vizualizare diff (Automatic Translation)
 view-display-page=Vizualizare pagină de afișare (Automatic Translation)
