--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -3499,6 +3499,7 @@ configure-x=Configure {0} (Automatic Copy)
 configured-database=Nastavenie databázy
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Nakonfiguruje, či hosť môže byť vzatie k pokladni poskytnutím e-mailovej adresy alebo či sa musí prihlásiť. (Automatic Translation)
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details. (Automatic Copy)
 confirm=Potvrdiť
@@ -15384,6 +15385,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Momentálne nie sú priradené
 there-are-no-attachments=Nenašli sa žiadne prílohy.
 there-are-no-availability-estimates=Neexistujú žiadne odhady dostupnosti. (Automatic Translation)
 there-are-no-available-advanced-settings-for-these-pages=Pre túto stránku nie sú k dispozícii žiadne pokročilé nastavenia.
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=Vo vybratom poradí nie sú k dispozícii žiadne položky na odoslanie. (Automatic Translation)
 there-are-no-available-nodes-for-selection=Pre tento výber nie sú dostupné žiadne uzly.
 there-are-no-available-payment-methods=Nie sú k dispozícii žiadne spôsoby platby. (Automatic Translation)
@@ -16891,6 +16893,8 @@ view-current-fields-warning-message=Toto zobrazenie vždy odráža aktuálne pol
 view-customizable-zones=Zobraziť prispôsobiteľné zóny
 view-data=Zobraziť dáta
 view-data-in-analytics-cloud=Zobrazenie údajov v službe Analytics Cloud (Automatic Translation)
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Zobraziť detaily
 view-diff=Zobraziť rozdiel (Automatic Translation)
 view-display-page=Zobraziť zobrazenú stránku (Automatic Translation)
