--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -3499,6 +3499,7 @@ configure-x=Konfigurera {0}
 configured-database=Konfigurerad databas
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Konfigurerar om en gäst kan betala genom att ange en e-postadress eller om de måste logga in.
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Konfigurerar om en order som begärt leveransdatum kan ställas in vid betalning.
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Konfigurerar om betalningssteget i betalningsvillkoren visas vid betalning.
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Konfigurerar om köpets ordernummer visas eller döljs i placerade och väntande orderuppgifter.
 confirm=Bekräfta
@@ -15384,6 +15385,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Det finns inga tilldelade obje
 there-are-no-attachments=Det finns inga bilagor.
 there-are-no-availability-estimates=Det finns inga tillgänglighetsberäkningar.
 there-are-no-available-advanced-settings-for-these-pages=Det finns inga avancerade inställningar tillgängliga för dessa sidor.
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=Det finns inga tillgängliga varor att skicka i den valda beställningen.
 there-are-no-available-nodes-for-selection=Det finns inga tillgänliga noder att välja.
 there-are-no-available-payment-methods=Det finns inga tillgängliga betalningsmetoder.
@@ -16891,6 +16893,8 @@ view-current-fields-warning-message=Visar fält som finns i formuläret just nu.
 view-customizable-zones=Visa anpassningsbara områden
 view-data=Se information
 view-data-in-analytics-cloud=Visa data i Analytics Cloud
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Visa information
 view-diff=Visa skillnad
 view-display-page=Visa visningssida
