--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -3499,6 +3499,7 @@ configure-x=Configure {0} (Automatic Copy)
 configured-database=Yapılandırılmış Veritabanı (Automatic Translation)
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Bir konuğun e-posta adresi sağlayarak ödeme yapıp yapmayacağını veya oturum açması gerekip gerekmediğini yapılandırır. (Automatic Translation)
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details. (Automatic Copy)
 confirm=Doğrula
@@ -15384,6 +15385,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Şu anda gecikmiş atanmış m
 there-are-no-attachments=Ek yok. (Automatic Translation)
 there-are-no-availability-estimates=Kullanılabilirlik tahmini yoktur. (Automatic Translation)
 there-are-no-available-advanced-settings-for-these-pages=Bu sayfalar için kullanılabilir gelişmiş ayar yok. (Automatic Translation)
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=Seçili sırada sevk edilebilecek kullanılabilir madde yok. (Automatic Translation)
 there-are-no-available-nodes-for-selection=Seçim için kullanılabilir düğüm yok. (Automatic Translation)
 there-are-no-available-payment-methods=Kullanılabilir ödeme yöntemi yoktur. (Automatic Translation)
@@ -16891,6 +16893,8 @@ view-current-fields-warning-message=Bu ekran her zaman formun geçerli alanları
 view-customizable-zones=Özelleştirilebilir Bölgeleri Görüntüle (Automatic Translation)
 view-data=Verileri Görüntüle
 view-data-in-analytics-cloud=Analytics Cloud'da Verileri Görüntüleme (Automatic Translation)
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Ayrıntıları Görüntüle (Automatic Translation)
 view-diff=Diff'i Görüntüle (Automatic Translation)
 view-display-page=Görüntüleme Sayfasını Görüntüle (Automatic Translation)
