--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -3499,6 +3499,7 @@ configure-x=Configure {0} (Automatic Copy)
 configured-database=Configured Database (Automatic Copy)
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Konfigurerer, om en gæst må komme i betaling ved at angive en e-mailadresse, eller om vedkommende skal logge på. (Automatic Translation)
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details. (Automatic Copy)
 confirm=Confirm (Automatic Copy)
@@ -15384,6 +15385,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Der er ikke noget tildelte var
 there-are-no-attachments=There are no attachments. (Automatic Copy)
 there-are-no-availability-estimates=Der er ingen tilgængelighedsestimater. (Automatic Translation)
 there-are-no-available-advanced-settings-for-these-pages=Der er ingen avancerede indstillinger tilgængelig for disse sider.
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=Der er ingen tilgængelige varer at afsende i den valgte ordre. (Automatic Translation)
 there-are-no-available-nodes-for-selection=Der er ingen knuder som kan vælges.
 there-are-no-available-payment-methods=Der er ingen tilgængelige betalingsmetoder. (Automatic Translation)
@@ -16891,6 +16893,8 @@ view-current-fields-warning-message=Denne visning afspejler altid formularens ak
 view-customizable-zones=Vis zoner, der kan tilpasses (Automatic Translation)
 view-data=Vis data
 view-data-in-analytics-cloud=Vis data i Analytics Cloud (Automatic Translation)
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Vis detaljer (Automatic Translation)
 view-diff=Vis Diff (Automatic Translation)
 view-display-page=Vis visningsside (Automatic Translation)
