--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -3499,6 +3499,7 @@ configure-x=پیکربندی {0}
 configured-database=دیتابیس پیکربندی شده
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=پیکربندی می کند که آیا یک مهمان ممکن است پرداخت با ارائه یک آدرس ایمیل و یا اگر آنها باید وارد سیستم. (Automatic Translation)
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details. (Automatic Copy)
 confirm=تایید
@@ -15384,6 +15385,7 @@ there-are-no-assigned-items-overdue-at-the-moment=در حال حاضر هیچ م
 there-are-no-attachments=هیچ ضمیمه‌ای وجود ندارد.
 there-are-no-availability-estimates=هیچ برآورد موجودی در دسترس نیست.
 there-are-no-available-advanced-settings-for-these-pages=تنظیمات پیشرفته برای این صفحه‌ها وجود ندارد.
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=هیچ آیتم موجود برای حمل در سفارش انتخاب شده وجود ندارد.
 there-are-no-available-nodes-for-selection=نودی برای انتخاب وجود ندارد
 there-are-no-available-payment-methods=هیچ روش پرداخت در دسترسی وجود ندارد.
@@ -16891,6 +16893,8 @@ view-current-fields-warning-message=این نمایش همیشه زمینه ها
 view-customizable-zones=مشاهده مناطق تنظیم‌پذیر
 view-data=مشاهده‌ی اطلاعات
 view-data-in-analytics-cloud=مشاهده داده ها در ابر تجزیه و تحلیل (Automatic Translation)
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=مشاهده‌ی جزئیات
 view-diff=مشاهده دیف (Automatic Translation)
 view-display-page=مشاهده صفحه نمایش (Automatic Translation)
