--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -3499,6 +3499,7 @@ configure-x=Configure {0} (Automatic Copy)
 configured-database=Dikonfigurasi Database
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Mengonfigurasi apakah tamu dapat melakukan checkout dengan memberikan alamat email atau jika mereka harus masuk. (Automatic Translation)
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details. (Automatic Copy)
 confirm=Konfirmasi
@@ -15384,6 +15385,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Saat ini tidak ada item yang d
 there-are-no-attachments=Tidak ada attachment
 there-are-no-availability-estimates=Tidak ada perkiraan ketersediaan. (Automatic Translation)
 there-are-no-available-advanced-settings-for-these-pages=Tidak ada pengaturan lanjutan yang tersedia untuk halaman ini.
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=Tak ada unsur yang tersedia untuk dikirim dalam urutan terpilih. (Automatic Translation)
 there-are-no-available-nodes-for-selection=Tidak ada node yang tersedia untuk seleksi.
 there-are-no-available-payment-methods=Tidak ada metode pembayaran yang tersedia. (Automatic Translation)
@@ -16891,6 +16893,8 @@ view-current-fields-warning-message=Tampilan ini selalu mencerminkan bidang form
 view-customizable-zones=Lihat Zona yang Dapat Disesuaikan (Automatic Translation)
 view-data=Lihat data
 view-data-in-analytics-cloud=Menampilkan Data di Analytics Cloud (Automatic Translation)
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Lihat Detil (Automatic Translation)
 view-diff=Lihat Diff (Automatic Translation)
 view-display-page=Lihat Halaman Tampilan (Automatic Translation)
