--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -3499,6 +3499,7 @@ configure-x=Configure {0} (Automatic Copy)
 configured-database=Konfigurirana zbirka podatkov (Automatic Translation)
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Konfigurira, ali se gost lahko odjavlja z zagotavljanjem e-poštnega naslova ali pa se mora prijaviti. (Automatic Translation)
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout. (Automatic Copy)
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details. (Automatic Copy)
 confirm=Potrdi
@@ -15384,6 +15385,7 @@ there-are-no-assigned-items-overdue-at-the-moment=Trenutno ni dodeljenih element
 there-are-no-attachments=Nobenih prilog ni. (Automatic Translation)
 there-are-no-availability-estimates=Ni ocen razpoložljivosti. (Automatic Translation)
 there-are-no-available-advanced-settings-for-these-pages=Za te strani ni na voljo dodatnih nastavitev. (Automatic Translation)
+there-are-no-available-delivery-terms=There are no available delivery terms. (Automatic Copy)
 there-are-no-available-items-to-ship-in-the-selected-order=V izbranem vrstnem redu ni na voljo artiklov za dobavo. (Automatic Translation)
 there-are-no-available-nodes-for-selection=Za izbor ni na voljo nobenih nodes. (Automatic Translation)
 there-are-no-available-payment-methods=Ni razpoložljivih načinov plačila. (Automatic Translation)
@@ -16891,6 +16893,8 @@ view-current-fields-warning-message=Ta prikaz vedno odraža trenutna polja obraz
 view-customizable-zones=Ogled prilagodljivih območij (Automatic Translation)
 view-data=Poglej podatke.
 view-data-in-analytics-cloud=Ogled podatkov v oblaku storitve Analytics (Automatic Translation)
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step (Automatic Copy)
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled (Automatic Copy)
 view-details=Ogled podrobnosti (Automatic Translation)
 view-diff=Poglej diff (Automatic Translation)
 view-display-page=Ogled prikazne strani (Automatic Translation)
